<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reconocimiento_de_texto_desde_imagen"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_abrir_galeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abrir_galeria"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_abrir_camara"/>

        <Button
            android:id="@+id/btn_abrir_camara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abrir_camara"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_titulo"
            app:layout_constraintStart_toEndOf="@id/btn_abrir_galeria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ScrollView
            android:id="@+id/sv_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ScrollViewCount">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_imagen"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/imagen"
                    android:src="@drawable/image_empty"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <Button
                    android:id="@+id/btn_reconocer_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reconocer_texto"
                    app:layout_constraintTop_toBottomOf="@id/iv_imagen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/tv_titulo_txt_reconocido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_reconocido"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toBottomOf="@id/btn_reconocer_txt"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_texto_reconocido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/texto"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_titulo_txt_reconocido"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>